--- a/Chingun/index.html
+++ b/Chingun/index.html
@@ -9,6 +9,14 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="container"></div>
+    <div class="container">
+        <div class="chingun-profile">
+            <div>
+                <h1>Сайн уу? Намайг Чингүн NEST ACADEMY Суралцагч</h1>
+                <div>Ерөнхий боловсролын Үй-цай сургуульд сурдаг. 16 настай дунд ангиасаа эхлээд программ сонирхсон тэгээд энэ жилийн зунаас эхлээд сураад явж байна. </div>
+            </div>
+            <div><img src="https://st3.depositphotos.com/3864435/16692/i/600/depositphotos_166926972-stock-photo-unknown-person-concept.jpg"></div>
+        </div>
+    </div>
 </body>
 </html>
