--- a/Chingun/index.html
+++ b/Chingun/index.html
@@ -11,12 +11,21 @@
 <body>
     <div class="container">
         <div class="chingun-profile">
-            <div>
-                <h1>Сайн уу? Намайг Чингүн NEST ACADEMY Суралцагч</h1>
+            <div class="text">
+                <div>
+                    <div class="topic"> Сайн уу? </div>
+                    <div class="topic"> Намайг Чингүн Гэдэг </div>
+                    <div class="topic"> NEST ACADEMY Суралцагч</div>
+                </div>
                 <div>Ерөнхий боловсролын Үй-цай сургуульд сурдаг. 16 настай дунд ангиасаа эхлээд программ сонирхсон тэгээд энэ жилийн зунаас эхлээд сураад явж байна. </div>
+                <div class="button">
+                    <button>ХӨЛСЛӨХ</button>
+                    <button>МИНИЙ ТӨСӨЛУУДЫГ ХАРАХ</button>
+                </div>
             </div>
-            <div><img src="https://st3.depositphotos.com/3864435/16692/i/600/depositphotos_166926972-stock-photo-unknown-person-concept.jpg"></div>
+            <div>
+                <img src="https://st3.depositphotos.com/3864435/16692/i/600/depositphotos_166926972-stock-photo-unknown-person-concept.jpg">
+            </div>
         </div>
-    </div>
 </body>
 </html>
