--- a/Chingun/index.html
+++ b/Chingun/index.html
@@ -17,7 +17,7 @@
                     <div class="topic"> Намайг Чингүн Гэдэг </div>
                     <div class="topic"> NEST ACADEMY Суралцагч</div>
                 </div>
-                <div>Ерөнхий боловсролын Үй-цай сургуульд сурдаг. 16 настай дунд ангиасаа эхлээд программ сонирхсон тэгээд энэ жилийн зунаас эхлээд сураад явж байна. </div>
+                <div>Ерөнхий боловсролын Үй-цай сургуульд сурдаг. 16 настай дунд ангиасаа эхлээд программ сонирхсон, Энэ жилийн зунаас эхлээд сураад явж байна. </div>
                 <div class="button">
                     <button>ХӨЛСЛӨХ</button>
                     <button>МИНИЙ ТӨСӨЛУУДЫГ ХАРАХ</button>
@@ -27,5 +27,18 @@
                 <img src="https://mail.google.com/mail/u/0?ui=2&ik=5643e327e2&attid=0.1&permmsgid=msg-a:r-739918101862301534&th=182af6586f2a8b7f&view=fimg&fur=ip&sz=s0-l75-ft&attbid=ANGjdJ_Sx35485SK1lKxVeq1A3uvV4Tp_gu3ZoDTzUzXvnB9oJbrPEUp__OMjXedcTCTgHibsMDlfMT6V4CqeF8f9n8tjcr1XKr7pcoRKRn1YzwxPIyvtEwvJD_wC-A&disp=emb&realattid=182af654f04dcb6d3ee1">
             </div>
         </div>
+        <div class="got-skills">
+            <div>СУРСАН ЧАДВАР</div>
+            <div>9 сараас хойш сураж мэдсэнээ дүгнэв</div>
+            <div>
+                <div class="ci circle-1">
+                    <div></div>
+                </div>
+                <div class="ci circle-2"></div>
+                <div class="ci circle-3"></div>
+                <div class="ci circle-4"></div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
