--- a/badrakh/index.html
+++ b/badrakh/index.html
@@ -56,6 +56,12 @@
                                     </div>
                                     <div> 
                                         <img class="earth" src="https://cdn.iconscout.com/icon/free/png-256/earth-2596357-2166709.png" ></img>
+                                        <div class="infos2" >
+                                        <h3 class="info9" > Name: </h3>
+                                        <p class="info10" > Earth </p>
+                                        <h3 class="info11" > Radius: </h3>
+                                        <p class="info12" > 6,371km </p> 
+                                    </div>
                                     </div>  
                                     <div class="contain7" >
                                         <div class="line15" ></div>
@@ -68,9 +74,21 @@
                                         </div>
                                         <div> 
                                             <img class="venus" src="https://cdn.iconscout.com/icon/free/png-256/venus-planet-astrology-solar-system-brightest-sister-terrestrial-20797.png" ></img>
+                                            <div class="infos1" > 
+                                                <h3 class="info5"> Name: </h3>
+                                                <p class="info8" > Venus </p>
+                                                <h3 class="info7"> Radius: </h3>
+                                                <p class="info6">  6,051.8km </p>
+                                            </div>
                                         </div>
-                                        <div> 
-                                            <img class="saturn" src="https://cdn.iconscout.com/icon/free/png-256/saturn-solar-system-planet-ring-galaxy-universe-astrology-1-20790.png" ></img>
+                                        <div class="saturncon" > 
+                                            <img  class="saturn" src="https://cdn.iconscout.com/icon/free/png-256/saturn-solar-system-planet-ring-galaxy-universe-astrology-1-20790.png" ></img>
+                                            <div class="infos" >
+                                            <p class="info" > Saturn </p> 
+                                            <h3 class="info1" > Name: </h3>
+                                            <p class="info2" > 58,232km </p>
+                                            <h3 class="info3" > Radius: </h3>
+                                        </div>
                                         </div>
                                         <div class="images" >
                                             <div class="js" >
@@ -120,6 +138,20 @@
                                         <div class="triangle-up1" ></div>
                                         <div class="triangle-up2" ></div> 
                                         <div class="triangle-up3" ></div> 
+                                        <div> 
+                                            <div class="png" >
+                                                <img class="small" src="https://cdn.iconscout.com/icon/free/png-256/moon-1532962-1299348.png"  ></img>
+                                                <div class="infos3" > 
+                                                <h3 class="info13" > Name: </h3>
+                                                <p class="info14"> Moon </p>
+                                                <h3 class="info15"> Radius: </h3>
+                                                <p class="info16">  1,737.4km </p>
+                                            </div>
+                                            </div>
+                                            <h1 class="end" > We Have Special Offer For You </h1>
+                                            <button class="endbutton" > More info! </button>
+                                            <h1 class="sad" > Thanks for visiting my site </h1>
+                                        </div>
                                 </div>
     </body>
 </html>
