--- a/badrakh/global.html
+++ b/badrakh/global.html
@@ -5,7 +5,7 @@
         <meta https-equiv="X - UA - Compatible" content = "IE=edge" />
         <meta name = "viewpart" content="width=device-width , inital-scale=1.0" /> 
         <title> Portfolio </title>
-        <link rel="stylesheet" href = "./global.css" ></link>
+        <link rel="stylesheet" href = "./site.css" ></link>
     </head>
     <body>
         <div class="container" >
