--- a/Chingun/index.html
+++ b/Chingun/index.html
@@ -28,7 +28,7 @@
             </div>
             <div>
                 <img class="profile-picture"
-                    src="https://mail.google.com/mail/u/0?ui=2&ik=5643e327e2&attid=0.1&permmsgid=msg-a:r-739918101862301534&th=182af6586f2a8b7f&view=fimg&fur=ip&sz=s0-l75-ft&attbid=ANGjdJ_Sx35485SK1lKxVeq1A3uvV4Tp_gu3ZoDTzUzXvnB9oJbrPEUp__OMjXedcTCTgHibsMDlfMT6V4CqeF8f9n8tjcr1XKr7pcoRKRn1YzwxPIyvtEwvJD_wC-A&disp=emb&realattid=182af654f04dcb6d3ee1">
+                    src="../picture/IMG_4670.jpeg">
             </div>
         </div>
         <div class="got-skills">
