--- a/Chingun/index.html
+++ b/Chingun/index.html
@@ -121,8 +121,16 @@
                     <input type="text" placeholder="name">
                     <input type="text" placeholder="phone number">
                 </div>
-                <input type="text" placeholder="Email address*">
+                <input type="email" placeholder="Email address*">
+                <input type="text" placeholder="Subject">
+                <input type="text"  placeholder="Message">
+                <button type="submit">Submit</button>
             </div>
+        </div>
+        <div class="footer">
+            <div>We Have Special Offer for You</div>
+            <button>BUTTON</button>
+            <div>Copyright 2018, Chingun</div>
         </div>
     </div>
 </body>
