--- a/Chingun/index.html
+++ b/Chingun/index.html
@@ -128,8 +128,8 @@
             </div>
         </div>
         <div class="footer">
-            <div>We Have Special Offer for You</div>
-            <button>BUTTON</button>
+            <div>Бид Танд Зориулсан Тусгай Санал Байна</div>
+            <button>ТОВЧ</button>
             <div>Copyright 2018, Chingun</div>
         </div>
     </div>
