--- a/badrakh/home.html
+++ b/badrakh/home.html
@@ -6,11 +6,29 @@
         <meta name = "viewpart" content="width=device-width , inital-scale=1.0" /> 
         <title> Portfolio </title>
         <link rel="stylesheet" href = "./home.css" ></link>
-        <link rel="stylesheet" href = "./global.css" ></link>
+        <link rel="stylesheet" href = "../global.css" ></link>
     </head>
     <body>
         <div class="container" >
-            <div class="head" ></div>
+            <div class="head" >
+                <div class="head-head">
+                    <img src="../picture/Chingun/team.png">
+                    <div class="head-menu">
+                        <button>HOME</button>
+                        <button>ЧИНГҮН</button>
+                        <button>УНДРАМ</button>
+                        <button>ЭНХТҮВШИН</button>
+                        <button>БАДРАХ</button>
+                    </div>
+                </div>
+                <div class="head-body">
+                    <div class="head-body-main">
+                        <div>Манай багийн танилцуулга сайтад </div>
+                        <div> тавтай морил</div>
+                    </div>
+                    <button>Бидэнтэй хамтрах</button>
+                </div>
+            </div>
         </div>
         <div class="middle" ></div>
         <div class="end" >
