--- a/badrakh/home.html
+++ b/badrakh/home.html
@@ -9,7 +9,6 @@
         <link rel="stylesheet" href = "../global.css" ></link>
     </head>
     <body>
-        <div class="container" >
             <div class="head" >
                 <div class="head-head">
                     <img src="../picture/Chingun/team.png">
@@ -27,6 +26,38 @@
                         <div> тавтай морил</div>
                     </div>
                     <button>Бидэнтэй хамтрах</button>
+                </div>
+            </div>
+        <div class="container" >
+            <div class="heading">
+                <h1>Гайхалтай гишүүд маань</h1>
+                <h5>Нэст академийн Золбоо & Наранцацрал багш нартай HOP1 ангийн 4р баг</h5>
+            </div>
+            <div class="introduction">
+                <div class="Chingun">
+                    <img src="../picture/Mura/avatars-000373844735-9n06kq-t240x240.jpg">
+                    <h3>ЧИНГҮН</h3>
+                    <p>De lunes a viernes me levanto a las siete y media, desayuno y camino hasta la universidad. Entro en clase a las nueve y salgo a la una. Al medio día como la comida en mi casa y veo la televisión. Por la tarde, estudio hasta las siete y después quedo con mis amigas.</p>
+                </div>
+                <div class="Undram">
+                    <img src="../picture/Mura/avatars-000373844735-9n06kq-t240x240.jpg">
+                    <h3>УНДРАМ</h3>
+                    <p>De lunes a viernes me levanto a las siete y media, desayuno y camino hasta la universidad. Entro en clase a las nueve y salgo a la una. Al medio día como la comida en mi casa y veo la televisión. Por la tarde, estudio hasta las siete y después quedo con mis amigas.</p>
+                </div>
+                <div class="Badrah">
+                    <img src="../picture/Mura/avatars-000373844735-9n06kq-t240x240.jpg">
+                    <h3>БАДРАХ</h3>
+                    <p>De lunes a viernes me levanto a las siete y media, desayuno y camino hasta la universidad. Entro en clase a las nueve y salgo a la una. Al medio día como la comida en mi casa y veo la televisión. Por la tarde, estudio hasta las siete y después quedo con mis amigas.</p>
+                </div>
+                <div class="Sumber">
+                    <img src="../picture/Mura/avatars-000373844735-9n06kq-t240x240.jpg">
+                    <h3>СҮМБЭР</h3>
+                    <p>De lunes a viernes me levanto a las siete y media, desayuno y camino hasta la universidad. Entro en clase a las nueve y salgo a la una. Al medio día como la comida en mi casa y veo la televisión. Por la tarde, estudio hasta las siete y después quedo con mis amigas.</p>
+                </div>
+                <div class="Enhtuvshin">
+                    <img src="../picture/Mura/avatars-000373844735-9n06kq-t240x240.jpg">
+                    <h3>ЭНХТҮВШИН</h3>
+                    <p>De lunes a viernes me levanto a las siete y media, desayuno y camino hasta la universidad. Entro en clase a las nueve y salgo a la una. Al medio día como la comida en mi casa y veo la televisión. Por la tarde, estudio hasta las siete y después quedo con mis amigas.</p>
                 </div>
             </div>
         </div>
