--- a/Enkhtuvshin/index.html
+++ b/Enkhtuvshin/index.html
@@ -1,35 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>prfjpg</title>
+    <title>profile</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="../global.css">
+    <script src="script.js"></script>
 </head>
+
 <body>
-    <div class="bck">
-        <div class="profile">
-            <div>Hello, I'm </div>
-            <div>Энхтүвшин</div>
-            <div class="redLine">Web developer</div>
-            <div class="bord">
-                <div>Download Resum</div>
-                <div class="line"></div>
-            </div>
-            <div class="button">
-                <div class="button-on-button">
-                   <div class="button-word">
-                    scroll down
-                   </div>
+    <input class="checkbox" type="checkbox" onclick="scrollWin()">
+
+    <div class="pageOne">
+        <div class="bck">
+            <div class="profile">
+                <div>Hello, I'm </div>
+                <div>Энхтүвшин</div>
+                <div class="redLine">Web developer</div>
+                <div class="bord">
+                    <div>Download Resum</div>
+                    <div class="line"></div>
                 </div>
-            </div> 
+                <div class="button">
+                    <div class="button-on-button">
+                        <div class="button-word">
+                            scroll down
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="pcr">
-            <img class="shadow" src="https://scontent.fuln2-2.fna.fbcdn.net/v/t1.15752-9/295884904_421711803110624_8577816625477248768_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=ae9488&_nc_ohc=d5CioFyR4n4AX-4oRKp&_nc_ht=scontent.fuln2-2.fna&oh=03_AVL1owl9XpbY6BYEoUufVDpi-8bYA1NSFblvHN4gUnySQg&oe=6323984A">
+            <img class="shadow"
+                src="https://scontent.fuln2-2.fna.fbcdn.net/v/t1.15752-9/295884904_421711803110624_8577816625477248768_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=ae9488&_nc_ohc=d5CioFyR4n4AX-4oRKp&_nc_ht=scontent.fuln2-2.fna&oh=03_AVL1owl9XpbY6BYEoUufVDpi-8bYA1NSFblvHN4gUnySQg&oe=6323984A">
         </div>
     </div>
+    <div class="pageSecond">
+        <div class="buttonSec">
+            <div class="button-in-button">
+                <div class="check"></div>
+            </div>
+        </div>
+        <div class="skill">
+            <div class="topLine">
+                <div></div>
+            </div>
+            <p>WE GOT SKILLS!</p>
+        </div>
+        <div class="skill-ques">
+            <p>Өвдөлт нь өөрөө маш их байж болох юм, adipiscium дагах болно, гэхдээ энэ нь зарим нэг их хөдөлмөр,
+                <br>өвдөлт гарч болох ийм үед тохиолдох болно.
+            </p>
+        </div>
+        <div class="protess">
+            <div class="progress-container">
+                <div class="progress">
+                    <div class="sector">
+                        <div></div>
+                    </div>
+                    <div class="sector">
+                        <div></div>
+                    </div>
+                    <div class="sector">
+                        <div></div>
+                    </div>
+                    <div class="sector">
+                        <div></div>
+                    </div>
+                </div>
+                <div class="center">
+                    <div class="point">90%</div>
+                </div>
+                    <div class="narrative">HTML</div>
+            </div>
+            <div class="progress-container">
+                <div class="progress">
+                    <div class="sector1">
+                        <div></div>
+                    </div>
+                    <div class="sector1">
+                        <div></div>
+                    </div>
+                    <div class="sector1">
+                        <div></div>
+                    </div>
+                    <div class="sector1">
+                        <div></div>
+                    </div>
+                </div>
+                <div class="center1">
+                    <div class="point">90%</div>
+                </div>
+                    <div class="narrative">CSS</div>
+            </div>
+            <div class="progress-container">
+                <div class="progress">
+                    <div class="sector2">
+                        <div></div>
+                    </div>
+                    <div class="sector2">
+                        <div></div>
+                    </div>
+                    <div class="sector2">
+                        <div></div>
+                    </div>
+                    <div class="sector2">
+                        <div></div>
+                    </div>
+                </div>
+                <div class="center2">
+                    <div class="point">85%</div>
+                </div>
+                    <div class="narrative">JAVASCRIPT</div>
+            </div>
+            <div class="progress-container">
+                <div class="progress">
+                    <div class="sector3">
+                        <div></div>
+                    </div>
+                    <div class="sector3">
+                        <div></div>
+                    </div>
+                    <div class="sector3">
+                        <div></div>
+                    </div>
+                    <div class="sector3">
+                        <div></div>
+                    </div>
+                </div>
+                <div class="center3">
+                    <div class="point">70%</div>
+                </div>
+                    <div class="narrative">GIT</div>
+            </div>
+        </div>
+    </div>
+    </div>
+    <input class="check" type="checkbox" onclick="scrollLost()">
+    </div>
 </body>
+
 </html>
