--- a/badrakh/home.html
+++ b/badrakh/home.html
@@ -10,9 +10,14 @@
     </head>
     <body>
         <div class="container" >
-            <div class="head" ></div>
+            <div class="head" >
+            </div>
+            <h1 class="title1" > ГАЙХАЛТАЙ ГИШҮҮД МААНЬ </h1>
+            <hr class="line" ></hr>
+            <p class="text1" > Нэст академийн Золбоо & Наранцацралт багштай HOP1 ангийн 4р баг </p>
         </div>
-        <div class="middle" ></div>
+        <div class="middle" >
+        </div>
         <div class="end" >
             <h1 class="title" > ХЭН ЮУ ГЭЖ ХЭЛЭВ? </h1>
             <p class="text" > Гишүүдийн сэтгэгдэл </p>
