--- a/badrakh/home.html
+++ b/badrakh/home.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="../global.css">
     </link>
 </head>
-
 <body>
     <div class="container">
         <div class="head">
@@ -32,6 +31,7 @@
                     <div> тавтай морил</div>
                 </div>
                 <button>Бидэнтэй хамтрах</button>
+            </div>
             </div>
         <div class="body" >
             <div class="heading">
