--- a/badrakh/home.html
+++ b/badrakh/home.html
@@ -129,13 +129,13 @@
             <div class="bck">
                 <div class="word">
                     <div class="words">
-                        <a href="../chingun//index.html" class="app1">Facebook</a>
-                        <a href="../mura//index.html" class="app2">Twitter</a>
-                        <a href="../sumber/index.html" class="app3">Google+</a>
-                        <a href="../badrakh/index.html" class="app4">Linkdln</a>
+                        <a href="https://www.facebook.com" class="app1">Facebook</a>
+                        <a href="https://twitter.com/" class="app2">Twitter</a>
+                        <a href="" class="app3">Google+</a>
+                        <a href="" class="app4">Linkdln</a>
                         <a href="" class="app5">Behance</a>
                         <a href="" class="app6">Dribbble</a>
-                        <a href="../badrakh//home.html" class="app7">Github</a>
+                        <a href="" class="app7">Github</a>
                     </div>
                 </div>
             </div>
