--- a/mura/index.html
+++ b/mura/index.html
@@ -68,7 +68,7 @@
                 <h1>Skills</h1>
             </div>
             <div class="logo">
-
+                <img src="../picture/Mura/htmlcssjs.png">
             </div>
         </div>
     </div>
