--- a/mura/index.html
+++ b/mura/index.html
@@ -39,19 +39,19 @@
             </div>
             <div class="drawing">
                 <h2>·drawing</h2>
-                <img src="https://i.gifer.com/1Bf.gif">
+                <img src="../picture/Mura/1Bf.gif">
             </div>
             <div class="singing">
                 <h2>·singing</h2>
-                <img src="https://i.pinimg.com/originals/7e/e4/9c/7ee49c80977790b8dd847ead71b4cfb1.gif"/>
+                <img src="../picture/Mura/singing.gif"/>
             </div>
             <div class="listening">
                 <h2>·listening to music</h2>
-                <img src="https://i.pinimg.com/originals/ea/fe/e2/eafee2e482946e12656cec667505e168.gif"/>
+                <img src="../picture/Mura/listening.gif"/>
             </div>
             <div class="watching">
                 <h2>·watching anime</h2>
-                <img src="https://media2.giphy.com/media/cKsXjwNQxtVncNBTey/giphy.gif"/>
+                <img src="../picture/Mura/giphy.webp"/>
             </div>
             <div class="playing">
                 <h2>·playing games</h2>
@@ -65,10 +65,31 @@
         </div>
         <div class="third">
             <div class="skills">
-                <h1>Skills</h1>
+                <h1>SKILLS</h1>
             </div>
             <div class="logo">
                 <img src="../picture/Mura/htmlcssjs.png">
+            </div>
+        </div>
+        <div class="fourth">
+            <div class="garchig">
+                <h1>PROJECTS</h1>
+            </div>
+            <div class="projects">
+                <div class="neg">
+                    <img src="../picture/Mura/pastel1.jpeg">
+                </div>
+                <div class="hoyr">
+                    <img src="../picture/Mura/pastel2.jpeg">
+                </div>
+                <div class="gurav">
+                    <img src="../picture/Mura/pastel3.jpeg">
+                </div>
+            </div>
+        </div>
+        <div class="fifth">
+            <div class="footer">
+                <h3>Contact Me</h3>
             </div>
         </div>
     </div>
