--- a/badrakh/home.html
+++ b/badrakh/home.html
@@ -78,7 +78,37 @@
                 </div>
             </div>
         </div>
-        <div class="middle"></div>
+        <div class="middle">
+            <h1 class="buteel" > БИДНИЙ БҮТЭЭЛЭЭС </h1> 
+            <hr class="line" ></hr>
+            <p class="guide" > Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet  </p>
+            <p class="guide1" > consectetur, adipisci velit, sed quia non numquam </p>
+            <div class="biggest" >
+            <div class="hover" > ALL </div>
+            <div class="hover" > WEB </div>
+            <div class="hover" > APPS </div>
+            <div class="hover" > ICONS </div>
+        </div>
+            <div class="big" >
+            <div class="buteeluud" >
+                <img class="inside-img " src="../picture/Badrakh/Screen Shot 2022-08-25 at 15.31.17.png" ></img>
+                <p class="names" > Pet World </p>
+            </div>
+            <div class="buteeluud" >
+                <img class="inside-img1" src="../picture/Badrakh/Screen Shot 2022-08-25 at 15.43.44.png" ></img>
+                <p class="names" > Responsive Web </p>
+            </div>
+            <div class="buteeluud" >
+                <img class="inside-img2" src="../picture/Badrakh/Screen Shot 2022-08-25 at 15.49.05.png" ></img>
+                <p class="names" > Sidebar </p>
+            </div>
+            <div class="buteeluud" >
+                <img class="inside-img3" src="../picture/Badrakh/Screen Shot 2022-08-25 at 15.55.06.png" ></img>
+                <p class="names"> Marvel VS DC </p>
+            </div>
+        </div>
+        <button class="load-more" > LOAD MORE PROJECTS </button>
+        </div>
         <div class="end">
             <h1 class="title"> ХЭН ЮУ ГЭЖ ХЭЛЭВ? </h1>
             <p class="text"> Гишүүдийн сэтгэгдэл </p>
